--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ PORT=8000
 CLIENT_URL=htpp://localhost:3000
 DATABASE_CLOUD='mongodb+srv://tnrla:123456Tonur@neoblog.sl1tv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
 DATABASE_LOCAL='mongodb://localhost:27017/neoblog'
+JWT_SECRET=KDJHF123HU232F3837G34DD321
