--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^3.0.1",
     "next": "^12.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "reactstrap": "^9.0.1"
   }
 }
