--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "isomorphic-fetch": "^3.0.0",
-    "js-cookie": "^3.0.1",
-    "next": "^12.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "reactstrap": "^9.0.1"
+    "isomorphic-fetch": "^2.1.1",
+    "js-cookie": "^2.2.1",
+    "next": "^9.0.5",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "reactstrap": "^8.0.1"
   }
 }
