--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
+APP_NAME=NEOBLOG
 PORT=8000
 CLIENT_URL=http://localhost:3000
 DATABASE_CLOUD='mongodb+srv://tnrla:123456Tonur@neoblog.sl1tv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
