--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "nprogress": "^0.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-quill": "^1.3.3",
     "reactstrap": "^8.0.1"
   }
 }
