--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@zeit/next-css": "^1.0.1",
     "isomorphic-fetch": "^2.1.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.2",
     "next": "^9.0.5",
     "nprogress": "^0.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-quill": "^1.3.3",
+    "react-render-html": "^0.6.0",
     "reactstrap": "^8.0.1"
   }
 }
