--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.2",
     "next": "^9.0.5",
     "nprogress": "^0.2.0",
+    "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-quill": "^1.3.3",
