--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ CLIENT_URL=http://localhost:3000
 DATABASE_CLOUD='mongodb+srv://tnrla:123456Tonur@neoblog.sl1tv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
 DATABASE_LOCAL='mongodb://localhost:27017/neoblog'
 JWT_SECRET=KDJHF123HU232F3837G34DD321
+SENDGRID_API_KEY=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
+EMAIL_TO=onurtaskirancom@gmail.com
