Added Password Forgot and Reset

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,5 @@ DATABASE_LOCAL='mongodb://localhost:27017/neoblog'
 JWT_SECRET=KDJHF123HU232F3837G34DD321
 SENDGRID_API_KEY=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
 EMAIL_TO=onurtaskirancom@gmail.com
+EMAIL_FROM=noreply@neoblog.com
+JWT_RESET_PASSWORD=875425489HIU34R9U43H034OR3H49UH4390P0IH
