--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-css": "^1.0.1",
     "isomorphic-fetch": "^2.1.1",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.2",
     "next": "^9.0.5",
     "nprogress": "^0.2.0",
