Social login with google

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,4 @@ SENDGRID_API_KEY=SG.4ZZG7BgfSHaEXTEx535TFA.NXiDGc1GSRC0MZFbaJp_OJcL_DGtyACwY6WgN
 EMAIL_TO=onurtaskirancom@gmail.com
 EMAIL_FROM=noreply@neoblog.com
 JWT_RESET_PASSWORD=875425489HIU34R9U43H034OR3H49UH4390P0IH
+GOOGLE_CLIENT_ID=1010547540467-1nieav2b9lm1hda3uqtrmvf3a3ag2h2b.apps.googleusercontent.com
