--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-google-login": "^5.2.2",
     "react-quill": "^1.3.3",
     "react-render-html": "^0.6.0",
     "reactstrap": "^8.0.1"
